--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Virginia -- History -- Colonial period, ca. 1600-1775'
 - !lcc 'F206'
 - !lcsh 'Bacon''s Rebellion, 1676'
+- GITenberg
 title: Bacon's Rebellion, 1676
 url: http://www.gutenberg.org/ebooks/28010
